; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/test/src/extr_ptunit-time.c_cbr_zero.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/test/src/extr_ptunit-time.c_cbr_zero.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.time_fixture = type { i32, i32 }
%struct.ptunit_result = type { i32 }
%struct.pt_packet_cbr = type { i64 }

@pte_bad_packet = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.time_fixture*)* @cbr_zero to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cbr_zero(%struct.time_fixture* %0) #0 {
  %2 = alloca %struct.ptunit_result, align 4
  %3 = alloca %struct.time_fixture*, align 8
  %4 = alloca %struct.pt_packet_cbr, align 8
  %5 = alloca i32, align 4
  store %struct.time_fixture* %0, %struct.time_fixture** %3, align 8
  %6 = getelementptr inbounds %struct.pt_packet_cbr, %struct.pt_packet_cbr* %4, i32 0, i32 0
  store i64 0, i64* %6, align 8
  %7 = load %struct.time_fixture*, %struct.time_fixture** %3, align 8
  %8 = getelementptr inbounds %struct.time_fixture, %struct.time_fixture* %7, i32 0, i32 1
  %9 = load %struct.time_fixture*, %struct.time_fixture** %3, align 8
  %10 = getelementptr inbounds %struct.time_fixture, %struct.time_fixture* %9, i32 0, i32 0
  %11 = call i32 @pt_time_update_cbr(i32* %8, %struct.pt_packet_cbr* %4, i32* %10)
  store i32 %11, i32* %5, align 4
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* @pte_bad_packet, align 4
  %14 = sub nsw i32 0, %13
  %15 = call i32 @ptu_int_eq(i32 %12, i32 %14)
  %16 = call i32 (...) @ptu_passed()
  %17 = getelementptr inbounds %struct.ptunit_result, %struct.ptunit_result* %2, i32 0, i32 0
  store i32 %16, i32* %17, align 4
  %18 = getelementptr inbounds %struct.ptunit_result, %struct.ptunit_result* %2, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  ret i32 %19
}

declare dso_local i32 @pt_time_update_cbr(i32*, %struct.pt_packet_cbr*, i32*) #1

declare dso_local i32 @ptu_int_eq(i32, i32) #1

declare dso_local i32 @ptu_passed(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
